# Bina-Blockchain-L1

./: .gitignore  .gitmodules  BeaconExporter.sol  Bloom-Bitcoin.rs  BloomFilterIndexer.ts  BloomFilterLib.sol  BloomFilterSubgraph.graphql  BytesArrayLib.sol  Casino SDK Bridge.rs  CoreUtilsLib.sol  EnhancedTemporalGradientBeacon.sol  EntropyChainConnector.sol  GovernanceLib.sol  IMerkleManager.sol  ITGBT.sol  KYCVerifier.sol  MerkleManager.sol  Mining.rs  MiningLib.sol  OTXS-Test.rs  README.md  RandomnessHandlerLib.sol  RandomnessLib.sol  Randomness_Entropy.code-workspace  Randomness_Shop.sol  RateAnalyzer.ts  RateTypes.sol  Real_Life_Scenario.txt  StorageLib.sol  TGBT_Token.sol  TemporalGradientBeacon.sol  TemporalGradientL2Beacon.sol  TokenomicsLib.sol  Verify_Randomness_OnChain.txt  batch_std_input.json  beacon-api-server.js  build_batch_json.ps1  compare_mining.ps1  cpu.rs  find_insert.ps1  (+15 more)
.github/: copilot-instructions.md
.github/workflows/: webpack.yml
.openzeppelin/: project.json
L3/: CONTRACT_TRIAGE.md  L3_ASSET_MODEL.md  L3_CONTRACT_MIGRATION.md  L3_CRYPTO_ACCELERATION_PLAN.md  L3_DAPP_READINESS.md  L3_DEVNET_PLAN.md  L3_MULTI_LANGUAGE_CONTRACT_MODEL.md  L3_PERFORMANCE_MODEL.md  L3_PRECOMPILE_ADDRESS_MAP.md  L3_PRECOMPILE_STRATEGY.md  L3_RANDOMNESS_POSITIONING.md  L3_RELIABILITY_SLO.md  L3_SCOPE_V0.md  L3_SECURITY_MODEL.md  L3_SEQUENCER_MODEL.md  L3_STYLUS_READINESS.md  TG_L3_ORBIT_PLAN.md
L3/contracts/: BeaconExporter.sol  TGL3EpochSettlement.sol  TGL3ProofMarket.sol  TGL3Treasury.sol  VDFVerifier.sol  ZKEntropyVerifier.sol
L3/devnet/: .env.example  README.md  cache-layer.js  epoch-settlement-worker.js  fast-write-ack-design.md  l3-read-api.js  materialized-randomness-store.js  randomness-consumer-sdk.js
L3/devnet/stylus/example-counter/: Cargo.toml
L3/devnet/stylus/example-counter/src/: lib.rs
L3/reference/: REFERENCE_TRIAGE.md  TemporalGradient_SDK.py  sdk-bridge-protocol.js
archive/solidity/: BloomFilterLib.sol  GovernanceLib.sol  MinerRewardsCalculator.sol  RandomnessLib.sol  SimpleMerkleManager.sol  TGBT_Token.sol
archive/standalone/: Bloom-Bitcoin-C++.cpp  BloomFilterIndexer.ts  Cargo.toml  Casino SDK Bridge.rs  Mining.rs  RateMonitor.js  RateVisualizer.js  TemporalGradient_SDK.js  TemporalGradient_SDK.py  UTXO_Tokenization.rs  network.rs
archive/standalone/security/: ContractEventValidator.js
benches/: cpu_detection_bench.rs
bridges/: ChainProtectionBridge.rs  CrossChainEntropy.ts
contracts/: BeaconExporter.sol  EntropyQualityLib.rs  EntropyQualityLib.rus  EntropyQualityLib.sol  EntropyQualityScorer.rs  EntropyQualityScorer.sol  FilterManager.sol  HardwareSourceVerifier.sol  MiningLib.sol  Randomness_Shop.sol  TGBT_Token.sol  VDFVerifier.sol  ZKEntropyVerifier.sol
cpu/: feature_verify.rs
examples/: secure_key.rs
interfaces/: IBeaconExporter.sol  IKYCVerifier.sol
l1-chain/: Cargo.toml  WALLET.md  index-Bina.html  node-start.ps1  start-all.ps1  stop-all.ps1
l1-chain/Solidity/: BinaOracle.sol  BinaOracleAdversarial.t.sol  BinaOracleConsumers.sol  BinaOracleRequestSimulation.t.sol  Binarandomness.sol  FastPathIdentityBina.sol
l1-chain/core/: Cargo.toml
l1-chain/core/src/: bitcoin_entropy.rs  block.rs  claims.rs  crypto.rs  difficulty.rs  lib.rs  pow.rs  randomness.rs  rewards.rs  secure_memory.rs  stale_block_miner.rs  transaction.rs
l1-chain/data/: ledger.csv
l1-chain/node/: Cargo.toml
l1-chain/node/src/: bitcoin_entropy.rs  envelope.rs  gossip.rs  main.rs  peers.rs  store.rs  wallet_cmd.rs
l1-chain/randomness-api/: .env.example  README.md  bina-relay.mjs  openapi.json  package-lock.json  package.json  verify-bina-output.mjs
l2-mining/: PRODUCTION_FILES.md  README.md  foundry.toml  mining_economics_model.py
l2-mining/contracts/: BloomFilterLib.sol  CoreUtilsLib.sol  FilterManager.sol  GovernanceLib.sol  MinerRewardsCalculator.sol  MiningLib.sol  RandomnessConsumptionRegistry.sol  RandomnessHandlerLib.sol  RandomnessLib.sol  RateTypes.sol  StaleBlockOracle.sol  TGBTConsumableRandomness.sol  TGBT_Token.sol  TemporalGradientCore.sol  TemporalGradientL2Beacon.sol  TokenomicsLib.sol  UTXOAnchorVerifier.sol  UTXOCertificateRegistry.sol
l2-mining/docs/: EPOCH_RULES.md  HEARTBEAT_SECURITY_SERVICE.md  L2_MINING_ARCHITECTURE.md  MODULAR_BEACON_REFACTOR.md  PEER_RELAY_NETWORK.md  REDEPLOY_BATCH_MODULE.md  SPSF-AI-RANDOMNESS-INTEGRATION.md  STORAGE_VERIFICATION_SUBSYSTEM.md  TEMPORAL_GRADIENT_WHITEPAPER.md
l2-mining/js/: .env.example  README.md  beacon-api-server.js  package-lock.json  package.json  remix-helper.js  tokenomics-simulator.js
l2-mining/miner-dashboard/: index.html  package-lock.json  package.json  server.js  solution-store.js
l2-mining/randomness-api/: README.md  bitcoin-anchor.js  epoch-builder.js  server.js  storage-attestation.js  test-dead-utxos.csv  utxo-scanner.js
l2-mining/rust/: Cargo.toml  miner-config.live.example.json  miner-control.json  miner-telemetry.relay-status.json  miner-trust-seal.json  nist_pqc.rs  (+2 more)
l2-mining/rust/package/: Cargo.toml  GETTING_STARTED.md  README.md  build-portable.ps1  install.ps1  smoke-config.json
l2-mining/rust/package/src/: main.rs
l2-mining/rust/self-miner/: Cargo.toml  build-release.ps1
l2-mining/rust/self-miner/assets/: dashboard.html
l2-mining/rust/self-miner/src/: cpu_info.rs  entropy_scorer.rs  heartbeat.rs  keygen.rs  main.rs  paths.rs  server.rs
l2-mining/rust/temporal_gradient_core/: Cargo.toml
l2-mining/rust/temporal_gradient_core/examples/: stale_block_demo.rs
l2-mining/rust/temporal_gradient_core/src/: bitcoin_anchor_proof.rs  bitcoin_dead_utxo_anchor.rs  chain.rs  config.rs  cpu.rs  crypto.rs  entropy_quality_scorer.rs  lib.rs  logging.rs  memory.rs  paths.rs  pending.rs  pqc.rs  queue.rs  runtime.rs  seed.rs  stale_block_miner.rs  storage_verification.rs  tamper_lock.rs  telemetry.rs  tg_output_filter.rs  tg_relay_transport.rs  utxo_fetcher.rs
l2-mining/rust/temporal_gradient_core/tests/: nativebtc_api_test.rs
security/: KYCValidator.js
services/: RandomnessService.js
sharding/: ShardManager.js
util/: update_helper.rs
(+67 files in other folders)
