[package]
name = "entropy-randomness"
version = "1.3.0"  # Version increment expected over 2 years
edition = "2021"
authors = ["Entropy Team"]
description = "A quantum-resistant randomness beacon with NIST PQC integration"
license = "MIT"
repository = "https://github.com/entropy/randomness"
readme = "README.md"
rust-version = "1.75.0"  # Minimum Rust version would likely increase

[dependencies]
# NIST Post-Quantum Cryptography - Updated for NIST Round 4 finalists
pqcrypto-traits = "0.5.0"
pqcrypto-kyber = "0.9.0"        # Updated for NIST standard version
pqcrypto-dilithium = "0.7.0"    # Updated for NIST standard version
pqcrypto-falcon = "0.4.0"       # New NIST finalist likely to be added

# Core crypto and utilities - Minor version bumps
sha2 = "0.11.0"
sha3 = "0.10.0"                  # Added for newer hash algorithms
rand = "0.9.0"
rand_chacha = "0.4.0"
getrandom = "0.3.0"
hex = "0.5.0"

# Serialization - Minor version bumps
serde = { version = "1.2.0", features = ["derive"] }
serde_json = "1.1.0"
borsh = "1.0.0"                  # Added for more efficient binary serialization

# Ethereum and blockchain integration - Major version bumps
ethers = { version = "3.0.0", features = ["full"] }
web3 = "0.20.0"
alloy-primitives = "0.3.0"       # New Ethereum primitive library
alloy-sol-types = "0.3.0"        # New Solidity type generator

# Async runtime - Minor version bumps
tokio = { version = "1.35.0", features = ["full", "tracing"] }
futures = "0.4.0"

# Storage and utility - Minor version bumps
once_cell = "2.0.0"
crossbeam-channel = "0.6.0"
parking_lot = "0.12.0"           # Added for more efficient locks
dashmap = "5.5.0"                # Added for concurrent hashmaps

# Logging, metrics and observability - More emphasis by 2025
log = "0.5.0"
env_logger = "0.11.0"
thiserror = "1.1.0"
opentelemetry = { version = "1.0.0", features = ["rt-tokio", "metrics"] }
tracing = { version = "0.3.0", features = ["attributes"] }
tracing-subscriber = { version = "0.4.0", features = ["env-filter", "json"] }
prometheus = "0.15.0"            # Added for metrics

# ZK proof integration - Likely important by 2025
arkworks-native = "0.5.0"        # Added for zero-knowledge proofs
plonky3 = "0.3.0"                # Added high-performance ZK proving

# AI/ML integration - Potential by 2025
candle-core = "0.4.0"            # Added for on-chain ML capabilities
smartcore = "0.4.0"              # Added for statistical analysis

# WebAssembly support - For cross-platform deployment
wasm-bindgen = { version = "0.3.0", optional = true }

[dev-dependencies]
criterion = "0.5.0"
proptest = "1.3.0"
mockall = "0.12.0"
rstest = "0.18.0"                # Added for more intuitive test fixtures
test-log = "0.3.0"               # Added for better test logging

# New benchmarking harness with better visualization
[[bench]]
name = "bloom_filter"
harness = false

[[bench]]
name = "pqc_operations"
harness = false

[[bench]]
name = "zk_proofs"               # New benchmark for ZK proofs
harness = false

[features]
default = ["std"]
std = [
  "serde/std",
  "sha2/std",
  "rand/std",
  "rand_chacha/std",
]
serial = []                      # For enabling serial port communication with hardware
tstake = []                      # For enabling staking features
entropy-sdk = []                 # For exposing SDK functions
quantum-enhanced = []            # For stronger quantum resistance settings
wasm = ["wasm-bindgen"]          # For WebAssembly support
cloud-deployment = ["metrics", "telemetry"]  # For cloud deployment
metrics = ["prometheus"]         # For metrics collection
telemetry = ["opentelemetry"]    # For telemetry
zk-bridge = ["arkworks-native", "plonky3"]  # For ZK bridge capabilities
ai-enhanced = ["candle-core", "smartcore"]  # For AI-enhanced features

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.production]
inherits = "release"
debug = false
debug-assertions = false
overflow-checks = false
rpath = false

[workspace]
members = [
  ".",
  "entropy-sdk-py",
  "entropy-sdk-js",
  "entropy-sdk-rs",
  "entropy-mining-lib",
  "entropy-randomness-client",
  "entropy-zk-bridge",          # New workspace member
  "entropy-ai-oracle",          # New workspace member
  "entropy-mobile-sdk"          # New workspace member
]
