[package]
name = "l1-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "l1-node"
path = "src/main.rs"

[[bin]]
name = "l1-wallet"
path = "src/wallet_cmd.rs"

[dependencies]
l1-core            = { path = "../core" }
hex                = "0.4"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio              = { version = "1", features = ["full"] }
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde              = { version = "1", features = ["derive"] }
anyhow             = "1"
serde_json         = "1"
axum               = "0.8"
tower-http         = { version = "0.6", features = ["cors", "limit"] }
blake3             = "1"
zeroize            = "1"
rand               = "0.8"
