[package]
name = "tg-self-miner"
version = "0.1.0"
edition = "2021"
authors = ["Entropy Team"]
description = "Self-contained PoW miner with embedded dashboard — single EXE, zero external dependencies"
license = "MIT"

[workspace]

[dependencies]
anyhow = "1"
async-stream = "0.3"
directories = "5"
axum = { version = "0.7", features = ["tokio"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
raw-cpuid = "11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
temporal_gradient_core = { path = "../temporal_gradient_core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
tokio-util = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[target.'cfg(windows)'.dependencies]
wmi = "0.14"
windows-sys = { version = "0.59", features = ["Win32_System_SystemInformation"] }

[[bin]]
name = "tg-self-miner"
path = "src/main.rs"
