[package]
name = "temporal_gradient_core"
version = "0.1.0"
edition = "2021"
authors = ["Entropy Team"]
description = "Core runtime and cryptographic helpers for the Temporal Gradient L2 miner"
license = "MIT"

[dependencies]
anyhow = "1"
blake3 = "1"
directories = "5"
ethers = { version = "2", features = ["abigen", "rustls"] }
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zeroize = "1"

[dev-dependencies]
tempfile = "3"
