[package]
name = "temporal_gradient_core"
version = "0.1.0"
edition = "2021"
authors = ["Entropy Team"]
description = "Core runtime and cryptographic helpers for the Temporal Gradient L2 miner"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = "1"
bitvec = "1"
blake3 = "1"
dashmap = "5"
directories = "5"
ethers = { version = "2", features = ["abigen", "rustls"] }
getrandom = "0.2"
hex = "0.4"
indexmap = "2"
k256 = { version = "0.13", features = ["ecdsa"] }
lazy_static = "1"
log = "0.4"
num-traits = "0.2"
once_cell = "1"
raw-cpuid = "11"
rand = "0.8"
rayon = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rustls = "0.21"
rustls-native-certs = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
sled = "0.34"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net", "io-util"] }
tokio-rustls = "0.24"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
serde = { version = "1", features = ["derive"] }
wmi = "0.13"
windows-sys = { version = "0.52", features = ["Win32_System_Memory", "Win32_System_Diagnostics_Debug"] }

[target.'cfg(target_os = "macos")'.dependencies]
smc = "0.2"

[features]
default = []
# Enable stale-block mining (Bitcoin fork/orphan entropy harvesting).
# Requires Bitcoin API access (e.g. mempool.space). Off by default.
stale-mining = []

[dev-dependencies]
tempfile = "3"

[[example]]
name = "stale_block_demo"
required-features = ["stale-mining"]
