[package]
name = "tg-stylus-counter"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
stylus-sdk = "0.8.4"
alloy-primitives = { version = "0.8", default-features = false }

[features]
export-abi = []

[dev-dependencies]
stylus-sdk = { version = "0.8.4", features = ["stylus-test"] }
